--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Opti</string>
+    <string name="title_activity_maps">Map</string>
+
+    <string name="add_trip">Add Trip</string>
 </resources>
